--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
     "axios": "^0.27.2",
+    "google-map-react": "^2.1.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.2.0",
     "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "react-icons": "^4.2.0",
-    "google-map-react": "^2.1.10",
+    "tss-react": "^4.9.3",
     "web-vitals": "^0.2.2"
   },
   "scripts": {
